07-Sep-2017 Fixes #355. TokenizedString now uses a hash internally, as opposed to string compares, to look for invariant strings.

06-Jun-2017 Fixes #342. Can now use 'python codingtools/generate_docs.py' to build local documentation for BAM. Assumes Python is invoked from the directory containing BuildAMation.sln, and that the path to the doxygen executable is passed.

05-Jun-2017 Fixes #341. Can now use 'python codingtools/build_bam.py' to build a local copy of BAM. Assumes Python is invoked from the directory containing the BuildAMation.sln.

05-Jun-2017 Fixes #352. The xbuild utility is now redundant in Mono; msbuild is the successor.

04-Jun-2017 Fixes #351. Avoid a possible stack overflow through infinite recursion while resolving duplicate packages by either defaults or command line specifications.

04-Jun-2017 Fixes #173. The master package now has it's parent directory added as a repository. This is to cover the case of the master package not residing in a formal repository (with packages and tests directories), in order to locate sibling packages.

04-Jun-2017 Fixes #348. Discovery of package repositories can be slow, due to a full recursive search through candidate directories. This was particularly slow for very deep directory hierarchies, and did not stop when a candidate package was found through such hierarchies. As such, the definition of a package repository has now changed to accomodate a faster search algorithm: A package repository is now a single directory containing packages; any non-package folders will no longer be considered as a nested package repository. IMPORTANT: This can be a breaking change for existing packages, depending on how their definition files were configured for previous versions of BAM.

04-Jun-2017 Fixes #349. Added an ellipsis to all output message that will have some progress following it, to clarify to expect to see something on the console log.
