@@ -1,3 +1,5 @@
+11-Sep-2017 Issue #360. PluginTest example now exports a symbol from a plugin, attempts to load it, and use the symbol.
+
 07-Sep-2017 Fixes #355. TokenizedString now uses a hash internally, as opposed to string compares, to look for invariant strings.
 
 06-Jun-2017 Fixes #342. Can now use 'python codingtools/generate_docs.py' to build local documentation for BAM. Assumes Python is invoked from the directory containing BuildAMation.sln, and that the path to the doxygen executable is passed.
